[package]
name = "cashu"
version = "0.0.1"
description = "Chaumian ecash protocol for Bitcoin"
keywords = ["ecash", "bitcoin", "cashu"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
authors = ["Clark Moody <clark@clarkmoody.com>"]
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.21.0"
bitcoin = { version = "0.30.0", features = ["rand", "serde"] }
itertools = "0.10.5"
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
url = "2.3.1"
